# icr

./: .gitignore  .icrignore  CLAUDE.md  HONEST_DEMO.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PRODUCTION_ROADMAP.md  README.md  RESEARCH_CRITIQUE_ITERATION_1.md  RESEARCH_CRITIQUE_ITERATION_2.md  RESEARCH_CRITIQUE_ITERATION_3.md  RESEARCH_CRITIQUE_ITERATION_4.md  RESEARCH_CRITIQUE_ITERATION_5.md  UPGRADE_PLAN.md  install.sh  marketplace.json  pyproject.toml
config/: default_config.yaml  schema.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  HONEST_EVALUATION.md  IMPLEMENTATION_PRIORITY.md  INNOVATION_ROADMAP.md  README.md  RESEARCH_FOUNDATION.md  TROUBLESHOOTING.md  USER_GUIDE.md
ic-claude/: .mcp.json  README.md  plugin.json  pyproject.toml
ic-claude/.claude-plugin/: plugin.json
ic-claude/commands/: ic.md  index.md  setup.md
ic-claude/hooks/: hooks.json
ic-claude/installer/: __init__.py  doctor.py  install.py  uninstall.py
ic-claude/scripts/: __init__.py  cli.py  hook_precompact.py  hook_sessionstart.py  hook_stop.py  hook_userpromptsubmit.py
ic-claude/skills/academic-innovation/: SKILL.md
ic-claude/skills/codebase-memory/: SKILL.md
ic-claude/tests/: __init__.py  test_hooks.py  test_installer.py
ic-mcp/: README.md  pyproject.toml
ic-mcp/src/ic_mcp/: __init__.py  icd_bridge.py  server.py
ic-mcp/src/ic_mcp/schemas/: __init__.py  inputs.py  outputs.py  validation.py
ic-mcp/src/ic_mcp/tools/: __init__.py  admin.py  env.py  memory.py  project.py  rlm.py
ic-mcp/src/ic_mcp/transport/: __init__.py  stdio.py
ic-mcp/tests/: __init__.py  conftest.py  test_schemas.py  test_tools.py
icd/: README.md  pyproject.toml
icd/src/icd/: __init__.py  config.py  main.py
icd/src/icd/graph/: __init__.py  builder.py  traversal.py
icd/src/icd/indexing/: __init__.py  chunker.py  contract_detector.py  embedder.py  ignore_parser.py  incremental.py  watcher.py
icd/src/icd/metrics/: __init__.py  ewr.py  imr.py  telemetry.py
icd/src/icd/pack/: __init__.py  compiler.py  dependency_packer.py  formatter.py  gating.py
icd/src/icd/retrieval/: __init__.py  crag.py  enhanced.py  entropy.py  entropy_calibrator.py  feedback_learner.py  hybrid.py  mmr.py  multihop.py  query_router.py  reranker.py
icd/src/icd/rlm/: __init__.py  aggregator.py  budget.py  llm_decomposer.py  planner.py  true_rlm.py
icd/src/icd/storage/: __init__.py  contract_store.py  memory_store.py  sqlite_store.py  vector_store.py
icd/tests/: __init__.py  conftest.py  test_indexing.py  test_pack.py  test_retrieval.py  test_storage.py
schemas/: admin_ping.input.schema.json  admin_ping.output.schema.json  common.schema.json  env_aggregate.input.schema.json  env_aggregate.output.schema.json  env_peek.input.schema.json  env_peek.output.schema.json  env_search.input.schema.json  env_search.output.schema.json  env_slice.input.schema.json  env_slice.output.schema.json  memory_get.input.schema.json  memory_get.output.schema.json  memory_list.input.schema.json  memory_list.output.schema.json  memory_pack.input.schema.json  memory_pack.output.schema.json  memory_pin.input.schema.json  memory_pin.output.schema.json  memory_stats.input.schema.json  memory_stats.output.schema.json  memory_unpin.input.schema.json  memory_unpin.output.schema.json  project_commands.input.schema.json  project_commands.output.schema.json  project_impact.input.schema.json  project_impact.output.schema.json  project_map.input.schema.json  project_map.output.schema.json  project_symbol_search.input.schema.json  project_symbol_search.output.schema.json  rlm_map_reduce.input.schema.json  rlm_map_reduce.output.schema.json  rlm_plan.input.schema.json  rlm_plan.output.schema.json
scripts/: install_git_hooks.sh
src/icr/: __init__.py  cli.py  core.py
tests/: __init__.py  conftest.py
tests/acceptance/: __init__.py  test_compaction_survival.py  test_exploration_waste.py  test_hook_fallback.py  test_impact_correctness.py  test_rlm_gating.py
tests/benchmarks/: __init__.py  ablation_study.py  benchmark_retrieval.py  compare_modes.py  downstream_evaluation.py  novel_components_benchmark.py  quick_benchmark.py  results.json
tests/fixtures/: sample_transcript.jsonl
tests/fixtures/sample_repo/: package.json
tests/fixtures/sample_repo/contracts/: api.yaml
tests/fixtures/sample_repo/src/api/: endpoints.ts
tests/fixtures/sample_repo/src/auth/: handler.ts  validator.ts
tests/fixtures/sample_repo/src/types/: shared.ts
tests/integration/: __init__.py  test_hooks.py  test_indexing_flow.py  test_mcp_tools.py  test_pack_flow.py  test_search_flow.py
tests/unit/: __init__.py  test_aggregator.py  test_chunker.py  test_config.py  test_contract_detector.py  test_embedder.py  test_entropy.py  test_gating.py  test_hybrid_retrieval.py  test_imr.py  test_ledger_parser.py  test_mmr.py  test_pack_compiler.py  test_sqlite_store.py  test_vector_store.py
