[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ic-claude"
version = "1.0.0"
description = "Claude Code Plugin for ICR (Infinite Context Runtime)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ICR Team" },
]
keywords = [
    "claude",
    "claude-code",
    "icr",
    "context-management",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
    "black>=23.0",
]
core = [
    "icr-core>=1.0.0",
]

[project.scripts]
ic-claude-install = "installer.install:main"
ic-claude-uninstall = "installer.uninstall:main"
ic-claude-doctor = "installer.doctor:main"
ic = "scripts.cli:main"

[project.urls]
Homepage = "https://github.com/icr/icr"
Documentation = "https://github.com/icr/icr#readme"
Repository = "https://github.com/icr/icr"
Issues = "https://github.com/icr/icr/issues"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "installer", "commands", "hooks"]

[tool.hatch.build.targets.sdist]
include = [
    "/scripts",
    "/installer",
    "/commands",
    "/hooks",
    "/plugin.json",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "yaml",
    "icr.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
]

[tool.ruff.isort]
known-first-party = ["scripts", "installer"]

[tool.black]
target-version = ["py310"]
line-length = 88
