[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ic-mcp"
version = "0.1.0"
description = "MCP Server for ICR - Tool plane exposing safe, bounded tools for Claude Code integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ICR Team" }
]
keywords = ["mcp", "claude", "ai", "tools", "icr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "tiktoken>=0.5.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ic-mcp = "ic_mcp.server:main"

[project.urls]
Homepage = "https://github.com/icr/ic-mcp"
Documentation = "https://github.com/icr/ic-mcp#readme"
Repository = "https://github.com/icr/ic-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/ic_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
