[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icd"
version = "0.1.0"
description = "ICR Daemon - Data plane component for intelligent code retrieval"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ICR Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "watchdog>=3.0",
    "hnswlib>=0.7.0",
    "numpy>=1.24",
    "onnxruntime>=1.15",
    "tree-sitter>=0.20",
    "tree-sitter-python>=0.20",
    "tree-sitter-javascript>=0.20",
    "tree-sitter-typescript>=0.20",
    "tree-sitter-go>=0.20",
    "tree-sitter-rust>=0.21",
    "tree-sitter-java>=0.20",
    "tree-sitter-c>=0.20",
    "tree-sitter-cpp>=0.20",
    "tiktoken>=0.5",
    "click>=8.0",
    "structlog>=23.0",
    "aiosqlite>=0.19",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
    "black>=23.0",
]
remote = [
    "openai>=1.0",
    "anthropic>=0.18",
]

[project.scripts]
icd = "icd.main:main"

[project.urls]
Homepage = "https://github.com/icr/icd"
Documentation = "https://github.com/icr/icd#readme"
Repository = "https://github.com/icr/icd.git"
Issues = "https://github.com/icr/icd/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
icd = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.black]
line-length = 100
target-version = ["py310"]
